# unisinos-projeto-integrador

./: README.md  index.html
.github/workflows/: deploy.yml
assets/: index-DYKCBLDj.js
backend/: .gitignore  pyproject.toml
backend/src/backend/: config.py
frontend/: index.html  package.json
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: MapaRS.jsx
frontend/src/store/: mapAtoms.js
mars-prj/: index.html
mars-prj/src/: App.jsx
preview/feature/mapa/: index.html
preview/feature/mapa/assets/: index-B2rUf2Wm.js  index-BXyAjFMn.css  index-DrU-dsq2.js  index-Dy3EsgiU.js  index-MoG0KNeJ.js
