[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fábio Tramasoli", email = "fabio@tramasoli.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.13",
    "fastapi>=0.135.3",
    "fastapi-azure-auth>=5.2.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
